--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -1,11 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Manage FAQs";
-    ViewBag.PageCaption = "Frequently Asked Questions";
+    ViewBag.Title = "Manage Questions";
+    ViewBag.PageCaption = "Questions About Product";
 }
 <div class="wrapper wrapper-content animated fadeInRight" id="containerId">
     <div class="ibox float-e-margins py-3">
         <div class="ibox-title">
-            <h5>Manage FAQs</h5>
+            <div class="col-md-11">
+
+                <h5>Manage Questions</h5>
+            </div>
+            <div class="col-md-1">
+                <a href="@Url.Action("Configure","FAQAdmin")" class="btn btn-warning btn-sm">Configure</a>
+            </div>
         </div>
         <div class="ibox-content">
             <div id="tabs" class="tabs product-tabs">
@@ -16,9 +22,7 @@
                     <li id="answeredQuestionsTab">
                         <a href="#answeredQuestionsPane" role="tab" data-toggle="tab" aria-controls="answered-questions" aria-expanded="false">Answered Questions</a>
                     </li>
-                    <li id="allQuestionsTab">
-                        <a href="#allQuestionsPane" role="tab" data-toggle="tab" aria-controls="all-questions" aria-expanded="false">All Questions</a>
-                    </li>
+
                 </ul>
                 <div class="tab-content">
 
@@ -35,47 +39,113 @@
 
                     </div>
 
-                    <div role="tabpanel" class="tab-pane" id="allQuestionsPane">
 
-                        @Html.Action("DisplayTabs", "FAQAdmin", new { view = "_AllFAQs" })
-
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<div id="editAnswerModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit Answer</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" id="faqId" />
+                <input type="hidden" id="viewName" />
+                @Html.AntiForgeryToken()
+                <div class="form-group">
+                    <label for="answerText">Answer:</label>
+                    <span style="display:none;" id="validation" class="text-danger">This field is required</span>
+                    <textarea maxlength="255" rows="6" required id="answerText" oninput="removeValidation()" class="form-control"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" onclick="saveAnswer()">Save</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Confirmation Modal -->
+<div id="deleteConfirmModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this question?</p>
+            </div>
+            <div class="modal-footer">
+                <input id="deleteViewName" hidden />
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" onclick="deleteFAQ()">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 @section Scripts {
     <script>
         $(document).ready(function () {
+            // Handle tab persistence
+            var activeTab = localStorage.getItem('activeTab');
+            if (activeTab) {
+                $('a[href="' + activeTab + '"]').tab('show');
+            }
+
+            $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+                localStorage.setItem('activeTab', $(e.target).attr('href'));
+            });
+
+            // Handle toggle of answer visibility
+            function toggleAnswer(id) {
+                $("#answer-" + id).slideToggle('fast', function() {
+                    $(this).css('margin-top', '10px'); // Adds a bit of spacing between question and answer
+                });
+                $("#answer-" + id).siblings('.faq-question').find('i').toggleClass('fa-chevron-down fa-chevron-up');
+            }
+
+            // Handle delete button
             $(document).on("click", ".btn-uninstall", function () {
                 var button = $(this);
                 var id = button.data("id");
-                var question = button.data("question");
+                var view = button.data("view");
 
                 swal({
-                    title: "Are you sure you want to delete the question ?",
+                    title: "Are you sure you want to delete the question?",
                     showCancelButton: true,
                     confirmButtonColor: "#DD6B55",
                     confirmButtonText: "Yes, Delete it!",
-                    closeOnConfirm: true,
-                    html: true
+                    closeOnConfirm: true
                 }, function (isConfirm) {
                     if (isConfirm) {
-                        // Set the ID in the hidden input field
-                        $("#deleteId").val(id);
-
-                        // Submit the form via AJAX
-                        $("#deleteForm").submit();
+                        if (view == "_AnsweredFAQs") {
+                            $("#deleteIdInAnswered").val(id);
+                            $("#deleteFormInAnswered").submit();
+                        } else {
+                            $("#deleteIdInUnanswered").val(id);
+                            $("#deleteFormInUnanswered").submit();
+                        }
                     }
                 });
 
-                return false; // Prevent default action
+                return false;
             });
 
-
+            // Handle opening of the answer modal
             $(document).on("click", ".open-answer-modal", function () {
                 var question = $(this).data("question");
                 var id = $(this).data("id");
@@ -83,6 +153,7 @@
                 $("#modal-question-id").val(id);
             });
 
+            // Handle answer update modal
             $(document).on("click", ".answer-link", function () {
                 var question = $(this).data("questionupdate");
                 var answer = $(this).data("answerupdate");
@@ -92,54 +163,63 @@
                 $("#modal-question-id-update").val(id);
             });
 
-            $(document).on("click", ".answer-link-fromAll", function () {
-                var question = $(this).data("questionall");
-                var answer = $(this).data("answerall");
-                var id = $(this).data("idall");
-                $("#modal-question-all").text("Question: " + question);
-                $("#modal-answer-all").attr("placeholder", answer);
-                $("#modal-question-id-all").val(id);
-            });
+            // Call this function after an answer is submitted
+           
 
-
+            // Call this function after an answer is updated
 
         });
-        function toggleIcon(elementId) {
-            console.log("toggle icon triggered for element: " + elementId);
-            let element = document.getElementById(elementId);
-            if (element) {
-                if (element.classList.contains("fa-eye")) {
-                    console.log("Contains fa-eye");
-                    element.classList.remove("fa-eye");
-                    console.log("Supposedly removed fa-eye");
-                    element.classList.add("fa-eye-slash");
-                    console.log("Supposedly added fa-eye-slash");
-                } else if (element.classList.contains("fa-eye-slash")) {
-                    console.log("Contains fa-eye-slash");
-                    element.classList.remove("fa-eye-slash");
-                    console.log("Supposedly removed fa-eye-slash");
-                    element.classList.add("fa-eye");
-                    console.log("Supposedly added fa-eye");
-                }
-            } else {
-                console.error("Element not found.");
-            }
-        }
-
-
         function AnswerSubmitted() {
             $('#AnswerModal').modal('hide');
             toastr.success('Answer saved successfully!');
+            callAjax();
         }
         function AnswerUpdated() {
-            $('#editAnswerModal').modal('hide');
-            $('#editAnswerModalFromAll').modal('hide');
+    $('#editAnswerModal').modal('hide');
+    toastr.success('Answer updated successfully!');
+    callAjax();
+}
 
-            toastr.success('Answer updated successfully!');
-        }
-        function Deleted() {
-            toastr.success('Question Deleted successfully!');
-        }
+// Ajax call to reload the answered questions pane
+    function callAjax() {
+        $.ajax({
+            url: '@Url.Action("DisplayTabs", "FAQAdmin")',
+            type: 'POST',
+            data: { view: "_AnsweredFAQs" },
+            success: function (response) {
+                $('#answeredQuestionsPane').html(response);
+            },
+            error: function (xhr, status, error) {
+                console.error("AJAX error: " + status + ' - ' + error);
+            }
+        });
+    }
+        function submitVisibilityForm(faqId, currentVisibility) {
+            var form = $("#visibilityForm-" + faqId);
+            // Toggle the visibility value
+            var newVisibility = !currentVisibility;
+            $("#visibilityInput-" + faqId).val(newVisibility);
 
+            // Submit the form
+            form.submit();
+        }
+    // Call this function after a question is deleted
+    function Deleted() {
+        toastr.success('Question deleted successfully!');
+        callAjax();
+        }
+        function toggleChevron(faqId) {
+            var chevron = $("#chevron-" + faqId);
+            var answer = $("#answer-" + faqId);
+
+            answer.on('shown.bs.collapse', function () {
+                chevron.removeClass("fa-chevron-down").addClass("fa-chevron-up");
+            });
+
+            answer.on('hidden.bs.collapse', function () {
+                chevron.removeClass("fa-chevron-up").addClass("fa-chevron-down");
+            });
+        }
+       
     </script>
 }
