--- a/Views/_AnsweredFAQs.cshtml
+++ b/Views/_AnsweredFAQs.cshtml
@@ -40,13 +40,16 @@
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-4">
-                    Product
+                    <b>Product</b>
+                   
                 </div>
                 <div class="col-md-4">
-                    Last Modified
+                    <b>Last Modified</b>
+                  
                 </div>
                 <div class="col-md-4">
-                    Actions
+                    
+                    <b>Actions</b>
                 </div>
             </div>
         </div>
@@ -58,15 +61,15 @@
             <div class="col-md-6">
                 <a class="question-link cursor-pointer text-dark" style="color:black;margin-top:10px;" data-toggle="collapse" data-target="#answer-@faq.FAQId" aria-expanded="false" onclick="toggleChevron(@faq.FAQId)">
                     @faq.Question
-                    <i id="chevron-@faq.FAQId" class="fa fa-chevron-circle-down"></i>
+                    <i id="chevron-@faq.FAQId" class="fa fa-chevron-down float-right"></i>
                 </a>
                 <div style="padding-top:20px;" id="answer-@faq.FAQId" class="collapse mt-2">
                     <a href="#" class="answer-link mt-" data-toggle="modal" data-questionupdate="@faq.Question" data-answerupdate="@faq.Answer" data-idupdate="@faq.FAQId" data-target="#editAnswerModal">
                         @faq.Answer
                     </a>
                 </div>
-
             </div>
+
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-4">
@@ -77,6 +80,16 @@
                     </div>
                     <div class="col-md-4">
                         <div class="btn-group" role="group">
+                            <!-- Edit Button -->
+                            <button class="btn btn-success btn-sm" data-toggle="modal" data-questionupdate="@faq.Question" data-answerupdate="@faq.Answer" data-idupdate="@faq.FAQId" data-target="#editAnswerModal">
+                                <i class="fa-regular fa fa-pencil"></i>
+                            </button>
+
+                            <!-- Toggle Visibility Button -->
+                            <button type="button" class="btn btn-sm btn-primary" onclick="submitVisibilityForm('@faq.FAQId', '@faq.Visibility')">
+                                <i class="fa @(faq.Visibility ? "fa-eye" : "fa-eye-slash")"></i>
+                            </button>
+
                             <button type="button"
                                     class="btn btn-danger btn-sm btn-uninstall"
                                     data-id="@faq.FAQId"
@@ -85,15 +98,6 @@
                                 <i class="fa fa-trash"></i>
                             </button>
 
-                            <!-- Toggle Visibility Button -->
-                            <button type="button" class="btn btn-sm btn-primary" onclick="submitVisibilityForm('@faq.FAQId', '@faq.Visibility')">
-                                <i class="fa @(faq.Visibility ? "fa-eye" : "fa-eye-slash")"></i>
-                            </button>
-
-                            <!-- Edit Button -->
-                            <button class="btn btn-success btn-sm" data-toggle="modal" data-questionupdate="@faq.Question" data-answerupdate="@faq.Answer" data-idupdate="@faq.FAQId" data-target="#editAnswerModal">
-                                <i class="fa-regular fa fa-pencil"></i>
-                            </button>
                         </div>
                     </div>
                 </div>
